# LangChain_RegexAgent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/data/: test_doc.txt
app/src/: agent.py  schemas.py  settings.py  tools.py  utils.py
app/src/llm/: agent.py  llm.py  schemas.py
app/src/prompts/: build_regex_tool_prompt.yaml  system_prompt.yaml
app/src/rag/: data_prep.py  rag.py
app/src/tools/: schemas.py  tools.py
app/src/tools/rag/: data_prep.py
app/src/tools/regex/: build_regex.py  run_regex.py
app/tests/tools/: test_build_regex.py  test_run_regex.py
