[project]
name = "langchain-regex-agent"
version = "0.1.0"
description = "Dependencies for the Regex and RAG document reader agent."
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "chromadb==1.3.3",
    "langchain==1.0.0",
    "langchain-chroma==1.0.0",
    "langchain-community==0.4.1",
    "langchain-openai==1.0.2",
    "openai==2.7.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "pytest==8.4.2",
    "pyyaml==6.0.3",
]
